# CBOED

./: .gitignore  PyBOED_Architecture(2).md  PyBOED_Architecture.md  README.md  pyproject.toml
.cache/: diag_go_lambda_0.00_N20000.npz  diag_go_lambda_0.01_N20000.npz  diag_go_lambda_0.10_N20000.npz  diag_go_lambda_0.50_N20000.npz  diag_lambda_0.00.npz  diag_lambda_0.00_N20000.npz  diag_lambda_0.10_N20000.npz  diag_lambda_0.25_N20000.npz  diag_lambda_0.50_N20000.npz  diag_lambda_1.00_N20000.npz  eig_full_lambda_0.00.npz
.cache_protocol/: protocol_lambda_0.00_go.npz  protocol_lambda_0.00_standard.npz
docs/: conf.py  index.md
src/cboed/: __init__.py  benchmarks.py
src/cboed/bounds/: base.py  bounds.py  quasi_optimality.py  schur.py
src/cboed/bounds/diagnostics/: approximation_based.py  denoisers.py  gradient_based.py  linear_approximation_based.py  sample_based.py
src/cboed/core/: advection_diffusion.py  base.py  burgers.py  linear_operator.py  selection.py
src/cboed/criteria/: base.py  optimality.py
src/cboed/estimators/: base.py  laplace.py  nmc.py  nmc_go.py  pce.py  vnmc.py
src/cboed/inference/: base.py  goal_oriented.py  linear_model.py
src/cboed/likelihood/: base.py  gaussian_likelihood.py
src/cboed/optim/: base.py  greedy.py  greedy_batch.py  greedy_schur.py
src/cboed/priors/: base.py  gaussian_priors.py  gaussian_process.py  kernel.py
src/cboed/viz/: bounds.py  designs.py  fields.py  matrices.py  spectrum.py  style.py
tests/: conftest.py  test_abc_contracts.py  test_precision.py
tests/integration/: conftest.py  test_approximation_diagnostics.py  test_bench.py  test_criteria_optimality.py  test_denoiser_diagnostics.py  test_gaussian_likelihood.py  test_goal_oriented.py  test_gradient_diagnostics.py  test_greedy.py  test_greedy_batch.py  test_greedy_schur.py  test_laplace.py  test_linear_model.py  test_nmc.py  test_nmc_go.py  test_nonlinear_diagnostics.py  test_sample_diagnostics.py  test_vnmc.py
tests/unit/: test_advection_diffusion.py  test_burgers.py  test_gaussian_likelihood.py  test_gaussian_prior.py  test_gaussian_proccess.py  test_kernel.py  test_linear_model.py  test_linear_operator.py  test_quasi_optimality.py  test_schur.py  test_selection.py
tutorials/: compare_signal_noise_methods.py  conservative_certified_vs_mc.py  make_figures copy.py  make_figures.py  make_figures_go.py  paper_protocol.py  plot_designs.py  plot_eig_bounds.py  plot_fields.py  quick_check_go.py  sweep_lambdas.py  tutorial_linear_model.py
