[project]
authors = [{name = "Mohamed Doumbouya", email = "doumbouya294@gmail.com"}]
dependencies = []
name = "CBOED"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Main pixi entry
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Editable installs
[tool.pixi.pypi-dependencies]
cboed = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jax = ">=0.10.2,<0.11"
scipy = ">=1.18.0,<2"
numpy = ">=2.5.0,<3"
h5py = ">=3.16.0,<4"
matplotlib = ">=3.11.0,<4"
pandas = ">=3.0.3,<4"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
surrogates = { features = ["surrogates"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test-unit = {cmd = "pytest tests/unit", description = "Speed unitary test"}
test-all = {cmd = "pytest tests/", description = "Test all before each push"}

[tool.pixi.feature.test.dependencies]
pytest-cov = ">=7.1.0,<8"
pytest = ">=9.1.1,<10"

[tool.pixi.feature.dev.tasks]
lint = {cmd = "ruff check src/cboed", description = "static analyze : detecte errors without running"}
format = {cmd = "ruff format src/cboed", description = "automatically format the code"}
docs = {cmd = "sphinx-build docs/ docs/_build", description = "Generate the html doc"}

[tool.pixi.feature.dev.dependencies]
sphinx-autoapi = ">=3.8.0,<4"
ruff = ">=0.15.20,<0.16"
sphinx = ">=9.1.0,<10"
myst-parser = ">=5.1.0,<6"
furo = ">=2025.12.19,<2026"

[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "sphinx", "myst-parser", "furo"]
surrogates = ["flax", "pytorch"]
