[project]
authors = [{name = "Mohamed Doumbouya", email = "doumbouya294@gmail.com"}]
dependencies = []
name = "CBOED"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Main pixi entry
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Editable installs
[tool.pixi.pypi-dependencies]
cboed = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jax = ">=0.10.2,<0.11"
scipy = ">=1.18.0,<2"
numpy = ">=2.5.0,<3"
h5py = ">=3.16.0,<4"
matplotlib = ">=3.11.0,<4"
pandas = ">=3.0.3,<4"
jaxtyping = ">=0.3.11,<0.4"
beartype = ">=0.22.9,<0.23"
equinox = ">=0.13.8,<0.14"
optax = ">=0.2.8,<0.3"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
surrogates = { features = ["surrogates"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test-unit = {cmd = "pytest tests/unit", description = "Speed unitary test"}
test-integration = { cmd = "pytest tests/integration -m 'not slow'", description = "Assembling" }
test-slow = { cmd = "pytest tests/ -m slow", description = "Heavy Monte-Carlo" }
test-all = {cmd = "pytest tests/", description = "Test all before each push"}

[tool.pixi.feature.test.dependencies]
pytest-cov = ">=7.1.0,<8"
pytest = ">=9.1.1,<10"

[tool.pixi.feature.dev.tasks]
lint = { cmd = "ruff check src/cboed tests", description = "Analyse statique" }
lint-fix = { cmd = "ruff check --fix src/cboed tests", description = "Corrige l'auto-corrigeable" }
format = { cmd = "ruff format src/cboed tests", description = "Formate le code" }
format-check = { cmd = "ruff format --check --diff src/cboed tests", description = "Vérifie sans modifier" }
docs = { cmd = "sphinx-build docs/ docs/_build", description = "Génère la doc HTML" }
check = { depends-on = ["format-check", "lint"], description = "Tout vérifier" }

[tool.pixi.feature.dev.dependencies]
sphinx-autoapi = ">=3.8.0,<4"
ruff = ">=0.15.20,<0.16"
sphinx = ">=9.1.0,<10"
myst-parser = ">=5.1.0,<6"
furo = ">=2025.12.19,<2026"

[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "sphinx", "myst-parser", "furo"]
surrogates = ["flax", "pytorch"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY", "RUF"]
ignore = ["F722"]

[tool.pytest.ini_options]
markers = ["slow: tests Monte-Carlo longs"]